--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "typescript": "^4.2.3"
   },
   "dependencies": {
-    "commander": "^7.2.0"
+    "chalk": "^4.1.0",
+    "commander": "^7.2.0",
+    "ora": "^5.4.0"
   }
 }
