--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.0.0",
   "description": "A command-line tool that watches a folder's structure and, on files' changes, run provided commands.",
   "main": "app.js",
+  "bin": {
+    "baechli": "npx tsc && node ./dist/app.js"
+  }
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
