--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "dependencies": {
     "chalk": "^4.1.0",
+    "chokidar": "^3.5.1",
     "commander": "^7.2.0",
     "ora": "^5.4.0"
   }
