Stop watching the files while the commands are executed

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "chalk": "^4.1.0",
     "chokidar": "^3.5.1",
     "commander": "^7.2.0",
-    "ora": "^5.4.0"
+    "ora": "^5.4.0",
+    "sleep": "^6.3.0"
   }
 }
