--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "baechli": "./dist/app.js"
   },
   "scripts": {
+    "compile": "trash dist && npx eslint ./src/app.ts && npx tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -48,6 +49,7 @@
     "@typescript-eslint/parser": "^4.19.0",
     "eslint": "^7.22.0",
     "eslint-config-google": "^0.14.0",
+    "trash": "^7.1.1",
     "typescript": "^4.2.3"
   },
   "dependencies": {
